# revocation-lists-2020-contracts

./: .gitignore  README.md
casper/: Makefile  casper-repo-pubkey.asc
casper/client/: go.mod  go.sum  main.go
casper/contract/: Cargo.toml
casper/contract/src/: main.rs  model.rs
fantom/: README.md  hardhat.config.js  package-lock.json  package.json
fantom/contracts/: RevocationLists.sol
fantom/test/: RevocationLists.test.js
near/: near  package-lock.json  package.json
near/contract/: Cargo.toml  Makefile  README.md  build.sh
near/contract/src/: lib.rs  models.rs  utils.rs
